<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="50dp" >

    <TextView
        android:id="@+id/startTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/start_time_label_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/endTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startTimeText"
        android:layout_below="@+id/startTimeText"
        android:layout_marginTop="6dp"
        android:text="@string/end_time_label_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/actionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/endTimeText"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/blue_to_white_gradient"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </View>

            <ImageButton
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/copy_button_description"
                android:src="@drawable/ic_action_copy" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </View>

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_button_description"
                android:src="@drawable/ic_action_edit" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </View>

            <ImageButton
                android:id="@+id/viewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/view_button_description"
                android:src="@drawable/ic_action_globe" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </View>

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share_button_description"
                android:src="@drawable/ic_action_share" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </View>

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_button_description"
                android:src="@drawable/ic_action_trash" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </View>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>